# src/shared/infra/http/routes/index.ts
@@ -7,8 +7,8 @@ import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
-router.use("/", usersRoutes);
 router.use("/", authenticateRoutes);
+router.use("/users", usersRoutes);
 router.use("/password", passwordRoutes);
 router.use("/institutions", institutionRoutes);
 
